programs/2-typecheck/invalid/example/3.12-if1.go
// expr condition in if statement is not type bool
package test

func main() {
	var int c = 2
	if c {
		print(3)
	}
}
